--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,32 @@
-apply plugin: 'com.traveloka.common.gradle.base-library'
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+        maven {
+          url "${beiartf_url}"
+          credentials(AwsCredentials) {
+            accessKey = "$System.env.BEIARTF_ACCESS_KEY_ID"
+            secretKey = "$System.env.BEIARTF_SECRET_ACCESS_KEY"
+            sessionToken = "$System.env.BEIARTF_SESSION_TOKEN"
+          }
+        }
+        jcenter()
+        mavenLocal()
+    }
+    dependencies {
+        classpath "com.traveloka.common.gradle:java-base-plugin:5.1.4"
+    }
+}
 
-publishing {
+apply plugin: "com.traveloka.common.gradle.base-root"
+
+wrapper {
+    gradleVersion = '4.10.2'
+    distributionType = "bin"
+}
+
+subprojects {
     repositories {
         maven {
           url "${beiartf_url}"
@@ -10,5 +36,11 @@ publishing {
             sessionToken = "$System.env.BEIARTF_SESSION_TOKEN"
           }
         }
+        jcenter()
+        mavenLocal()
+    }
+    afterEvaluate {
+        sourceCompatibility = 1.7
+        targetCompatibility = 1.7
     }
 }
